Optimized waiter for network config & more - Fixed post-update command (with test/dev versions)